[gd_scene load_steps=3 format=3 uid="uid://bgp4ewl5emyro"]

[ext_resource type="Script" uid="uid://c2k3ofq7rd5g" path="res://scripts/increase_physical_attributes_ui.gd" id="1"]
[ext_resource type="Theme" uid="uid://c8otso07yd5di" path="res://Image/UI/BloodButtonCompleted.tres" id="2"]

[node name="IncreasePhysicalAttributesUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -72.0
offset_right = 165.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_right = -15.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Increase a Physical Attribute"
horizontal_alignment = 1

[node name="StrengthHBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Strength" type="Label" parent="Panel/VBoxContainer/StrengthHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Strength"

[node name="CurrentStrength" type="Label" parent="Panel/VBoxContainer/StrengthHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Separation" type="Label" parent="Panel/VBoxContainer/StrengthHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "/"
horizontal_alignment = 1

[node name="MaximumStrength" type="Label" parent="Panel/VBoxContainer/StrengthHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/StrengthHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "Select"

[node name="DexterityHBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Dexterity" type="Label" parent="Panel/VBoxContainer/DexterityHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dexterity"

[node name="CurrentDexterity" type="Label" parent="Panel/VBoxContainer/DexterityHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Separation" type="Label" parent="Panel/VBoxContainer/DexterityHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "/"
horizontal_alignment = 1

[node name="MaximumDexterity" type="Label" parent="Panel/VBoxContainer/DexterityHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/DexterityHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "Select"

[node name="StaminaHBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Stamina" type="Label" parent="Panel/VBoxContainer/StaminaHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Stamina"

[node name="CurrentStamina" type="Label" parent="Panel/VBoxContainer/StaminaHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Separation" type="Label" parent="Panel/VBoxContainer/StaminaHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "/"
horizontal_alignment = 1

[node name="MaximumStamina" type="Label" parent="Panel/VBoxContainer/StaminaHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/StaminaHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
text = "Select"

[node name="Cancel" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("2")
text = "Cancel"
